--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,14 @@
-/*  */
+/* Universal selectrs */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-/* elements selectors */
+/* Elements selectors */
 body {
     background-color: #d9dcd6;
 }
 
-/* class selectors */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -51,7 +50,18 @@ a {
 p {
     font-size: 16px;
 }
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
 
+footer h4 {
+    font-size: 20px;
+}
+
+/* Class Selectors */
 .hero {
     height: 800px;
     width: 100%;
@@ -93,20 +103,16 @@ p {
     color: #ffffff;
 }
 
-
-
 .benefit-aside h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
 
 .benefit-aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
 
 .main-section {
     margin-bottom: 20px;
@@ -117,27 +123,11 @@ p {
     color: #ffffff;
 }
 
-
 .main-section img {
     max-height: 200px;
 }
-
-
 
 .main-section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-
-footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-footer h4 {
-    font-size: 20px;
-}
-
