--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header {
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/* made header classes into element selectors */
 header h1 {
     display: inline-block;
     font-size: 48px;
@@ -70,7 +70,7 @@ footer h4 {
     background-size: cover;
     background-position: center;
 }
-
+/* made main as a parent element with class that values content, nested within are section elements.*/
 .content {
     width: 75%;
     display: inline-block;
@@ -112,7 +112,7 @@ footer h4 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* common class for h3 */
 .benefit-aside {
     margin-bottom: 32px;
     color: #ffffff;
